<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearCuenta"
    android:background="@drawable/fade_log">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="328dp"
        android:layout_height="108dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        android:contentDescription="@string/descripcion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="374dp"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:text="@string/crear_cuenta2"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <EditText
        android:id="@+id/mail"
        android:layout_width="376dp"
        android:layout_height="60dp"
        android:layout_marginTop="44dp"
        android:background="#e9ebf0"
        android:ems="10"
        android:hint="@string/correo_electronico2"
        android:inputType="textEmailAddress"
        android:textColorHint="#7f8186"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/usuario"
        android:layout_width="376dp"
        android:layout_height="60dp"
        android:layout_marginTop="44dp"
        android:background="#e9ebf0"
        android:ems="10"
        android:hint="@string/nombre_de_usuario2"
        android:inputType="text"
        android:textColorHint="#7f8186"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail" />

    <EditText
        android:id="@+id/contra"
        android:layout_width="376dp"
        android:layout_height="60dp"
        android:layout_marginTop="44dp"
        android:background="#e9ebf0"
        android:ems="10"
        android:hint="@string/contrase_a2"
        android:inputType="textPassword"
        android:textColorHint="#7f8186"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usuario" />

    <Button
        android:id="@+id/continuarInicio"
        android:layout_width="376dp"
        android:layout_height="60dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/black"
        android:text="CONTINUAR"
        android:textSize="17sp"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contra" />


</androidx.constraintlayout.widget.ConstraintLayout>